--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@headlessui/react": "^1.7.13",
         "@reduxjs/toolkit": "^2.8.2",
         "axios": "^1.11.0",
+        "bootstrap": "^5.3.7",
+        "bootstrap-icons": "^1.13.1",
         "chart.js": "^4.2.1",
         "formik": "^2.4.6",
         "next": "13.2.4",
