--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bootstrap-icons": "^1.13.1",
         "chart.js": "^4.2.1",
         "formik": "^2.4.6",
+        "moment": "^2.30.1",
         "next": "13.2.4",
         "react": "18.2.0",
         "react-chartjs-2": "^5.2.0",
