--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-circular-progressbar": "^2.1.0",
         "react-dom": "18.2.0",
+        "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "redux-persist": "^6.0.0",
         "sass": "^1.59.3",
