--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "bootstrap": "^5.3.7",
         "bootstrap-icons": "^1.13.1",
         "chart.js": "^4.2.1",
+        "firebase": "^12.4.0",
         "formik": "^2.4.6",
         "moment": "^2.30.1",
         "next": "13.2.4",
@@ -27,6 +28,7 @@
         "react-dom": "18.2.0",
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
+        "react-toastify": "^11.0.5",
         "redux-persist": "^6.0.0",
         "sass": "^1.59.3",
         "sweetalert2": "^11.22.2",
