--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-dom": "18.2.0",
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
+        "react-select": "^5.10.2",
         "react-toastify": "^11.0.5",
         "redux-persist": "^6.0.0",
         "sass": "^1.59.3",
